# Listen

./: .gitignore  CONTRIBUTING.md  LICENSE  Listen.spec  Package.swift  README.md  build.sh  pyproject.toml
Listen/App/: AppState.swift  ListenApp.swift
Listen/Audio/: AudioCaptureService.swift
Listen/Config/: AppConfig.swift
Listen/Resources/: AppIcon.icns  Info.plist
Listen/Transcription/: WhisperService.swift
Listen/UI/: RecordingPillView.swift
assets/: icon.icns
electron/: index.html  main.js  package-lock.json  package.json  pill.html  preload.js  renderer.js  style.css
electron/resources/: macos-globe-listener.swift
electron/scripts/: build-globe-listener.js
listen/: __entry__.py  __main__.py  audio.py  cli.py  config.py  engine.py  permissions.py  server.py  transcriber.py
scripts/: build.py
